syntax = "proto3";

message Duck {
  uint32 id = 1;
  float rotation = 2;
  float x = 3;
  float y = 4;
  float z = 5;
  uint32 score = 6;
}

message UpdateSync {
  repeated Duck ducks = 1;
  optional float bread_x = 2;
  optional float bread_y = 3;
  optional float bread_z = 4;
}
