syntax = "proto3";

message UpdateProto {
  uint32 id = 1;
  float x = 2;
  float z = 3;
  float rotation = 4;
}

message UpdateSyncProto {
  // repeated Update ducks = 1 [packed = true];
  repeated UpdateProto ducks = 1;
}
